html ahref practise

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,6 +7,18 @@
     </head>
 
     <body>
-        Hello Jello
+        <h1>This is h1 tag</h1>
+        <h3>This is h3 tag</h3>
+        <section>
+
+        <p>This is a paragraph. Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+            Odit accusantium quisquam eum quibusdam rem, <br>
+            id repudiandae doloremque error quaerat, optio, <br>
+            eaque a necessitatibus aliquid ipsam tempore ipsa sit ea odio! 
+        </p>
+        <a target = "_blank" href = "https://bikroy.com/en/my/dashboard">This is a website</a><br>
+        <a target = "_blank" href = "new_one.html">This is a local file</a>
+        </section>
+
     </body>
 </html>
