added outside file

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,7 +17,8 @@
             eaque a necessitatibus aliquid ipsam tempore ipsa sit ea odio! 
         </p>
         <a target = "_blank" href = "https://bikroy.com/en/my/dashboard">This is a website</a><br>
-        <a target = "_blank" href = "new_one.html">This is a local file</a>
+        <a target = "_blank" href = "new_one.html">This is a local file</a> <br>
+        <a target = "_blank" href = "../outside.html">This is a local file from outside the folder</a>
         </section>
 
     </body>
