--- a/outside.html
+++ b/outside.html
@@ -4,6 +4,6 @@
         <title>NewFile</title>
     </head>
     <body>
-        <h1>New file using a href</h1>
+        <h1>New file using a href from outside the folder</h1>
     </body>
 </html>
