ordered and unordered list, images

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,14 +12,30 @@
         <section>
 
         <p>This is a paragraph. Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+            <hr>
             Odit accusantium quisquam eum quibusdam rem, <br>
             id repudiandae doloremque error quaerat, optio, <br>
             eaque a necessitatibus aliquid ipsam tempore ipsa sit ea odio! 
         </p>
         <a target = "_blank" href = "https://bikroy.com/en/my/dashboard">This is a website</a><br>
         <a target = "_blank" href = "new_one.html">This is a local file</a> <br>
-        <a target = "_blank" href = "../outside.html">This is a local file from outside the folder</a>
-        </section>
+        <hr>
+
+        <button><a target = "_blank" href = "../outside.html">Outside the folder</a></button>
+        <hr>
+        <img width="400" src = "images/waffle.jpg" alt = "waffle">
+        <p>Ordered List of Manufacturers</p>
+        <ol> 
+            <li>Samsung</li>
+            <ul>
+                <li>Galaxy A55</li>
+                <li>Galaxy A35</li>
+                <li>Galaxy S24 Ultra</li>
+            </ul>
+            <li>Apple</li>
+            <li>Huawei</li>
+        </ol>   
+    </section>
 
     </body>
 </html>
