--- a/HTML/index.html
+++ b/HTML/index.html
@@ -35,6 +35,25 @@
             <li>Apple</li>
             <li>Huawei</li>
         </ol>   
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Status</th>
+                <th>Email</th>
+            </tr>
+            <tr>
+                <td>Efti</td>
+                <td>Single</td>
+                <td>aeftiar@gmail.com</td>
+            </tr>
+            <tr>
+                <td>Samin</td>
+                <td>Single</td>
+                <td>samskull@gmail.com</td>
+            </tr>
+        </table>
+
+
     </section>
 
     </body>
