--- a/HTML/index.html
+++ b/HTML/index.html
@@ -53,6 +53,16 @@
             </tr>
         </table>
 
+        <form>
+            <input type="text" placeholder="Your Name" required><br>
+            <input type="email" placeholder="Your Email" required><br>
+            <input type="password" placeholder="Your password" required><br>
+            <input type="date"><br>
+            <input type="url" required>
+            <input type="submit"><br>
+            <input type="checkbox"><br>
+            <input type="radio">
+        </form>
 
     </section>
 
