end of html practise

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -63,7 +63,27 @@
             <input type="checkbox"><br>
             <input type="radio">
         </form>
+        <br>
+        <bdo dir="rtl">
+            Hello World, How are you ? 
+        </bdo>
+        <br>
+        <details>
+            These are all the stuffs mentioned in the collapsible text:
+            <h1><abbr title="Bangladesh is a south east asian country">Bangladesh</abbr></h1>
+            <p>Hello, this is <b>ZURA</b>. I love drinking H<sup>2</sup>O and hate log<sub>ln</sub>operations.
+             I generally like <mark>maths</mark> but not always.</p>
+            <summary><h1>checking abbr, bold, mark, subscript, superscript, etc</h1></summary>
+        </details>
 
+        <details>
+            <address>
+                Sylhet, Shahi Eidgah, Syed Pur House
+            </address>
+            <summary>My Address</summary>
+        </details> 
+        <br>
+        <figcaption>An image caption using figcaption</figcaption>
     </section>
 
     </body>
